[workspace]
resolver = "3"
members = [
	"circuits",
	"circuit-types",
	"circuit-macros",
	"constants",
	"common",
	"config",
	"core",
	"darkpool-client",
	"external-api",
	"gossip-api",
	"mock-node",
	"node-support/snapshot-sidecar",
	"node-support/event-export-sidecar",
	"node-support/bootloader",
	"renegade-crypto",
	"state",
	"system-bus",
	"test-helpers",
	"util",
	"workers/api-server",
	"workers/api-server/benches/api-server-bench-util",
	"workers/chain-events",
	"workers/event-manager",
	"workers/gossip-server",
	"workers/handshake-manager",
	"workers/job-types",
	"workers/network-manager",
	"workers/price-reporter",
	"workers/proof-manager",
	"workers/task-driver",
	"renegade-metrics",
	"system-clock",
	"metrics-sampler",
]

[profile.bench]
opt-level = 3 # Full optimizations
lto = true
debug = true

[profile.release]
opt-level = 3     # Full optimizations
codegen-units = 1
lto = true

[workspace.dependencies]
# === Arithmetic + Cryptography === #
ark-mpc = { git = "https://github.com/renegade-fi/ark-mpc", default-features = false }
mpc-plonk = { git = "https://github.com/renegade-fi/mpc-jellyfish.git" }
mpc-relation = { git = "https://github.com/renegade-fi/mpc-jellyfish.git" }
jf-primitives = { git = "https://github.com/renegade-fi/mpc-jellyfish.git" }
num-bigint = { version = "0.4.3" }
rand = "0.8"

# === Networking === #
libp2p = "0.51"
libp2p-core = { version = "0.39" }
libp2p-kad = { version = "0.43" }
libp2p-identity = { version = "0.1" }
libp2p-swarm = { version = "0.42" }
libp2p-swarm-derive = { version = "0.32" }

# === Concurrency + Messaging === #
crossbeam = "0.8"
futures = "0.3"
tokio = { version = "1" }

# === Ethereum Libraries === #
alloy = "1.0.1"
alloy-contract = "1.0.1"
alloy-primitives = "1.0.1"
alloy-sol-types = "1.0.1"

# === HTTP === #
reqwest = { version = "0.12", features = ["json"] }
http = { version = "1.3.1" }

# === Workspace Dependencies === #
darkpool-client = { path = "darkpool-client" }
api-server = { path = "workers/api-server" }
chain-events = { path = "workers/chain-events" }
constants = { path = "constants", default-features = false }
circuits = { path = "circuits", default-features = false }
circuit-macros = { path = "circuit-macros", default-features = false }
circuit-types = { path = "circuit-types", default-features = false }
common = { path = "common", default-features = false }
config = { path = "config", default-features = false }
event-manager = { path = "workers/event-manager", default-features = false }
external-api = { path = "external-api", default-features = false }
gossip-api = { path = "gossip-api", default-features = false }
gossip-server = { path = "workers/gossip-server", default-features = false }
handshake-manager = { path = "workers/handshake-manager", default-features = false }
job-types = { path = "workers/job-types", default-features = false }
metrics-sampler = { path = "metrics-sampler", default-features = false }
mock-node = { path = "mock-node", default-features = false }
network-manager = { path = "workers/network-manager", default-features = false }
price-reporter = { path = "workers/price-reporter", default-features = false }
proof-manager = { path = "workers/proof-manager", default-features = false }
renegade-crypto = { path = "renegade-crypto", default-features = false }
renegade-metrics = { path = "renegade-metrics", default-features = false }
state = { path = "state", default-features = false }
system-bus = { path = "system-bus", default-features = false }
system-clock = { path = "system-clock", default-features = false }
task-driver = { path = "workers/task-driver", default-features = false }
test-helpers = { path = "test-helpers", default-features = false }
util = { path = "util", default-features = false }

# === Misc === #
async-trait = "0.1"
eyre = "0.6"
indexmap = "2.0.2"
itertools = "0.10"
serde = { version = "1.0" }
serde_json = "1.0.64"
thiserror = "2.0"
tracing = "0.1"
tracing-opentelemetry = "0.22"
metrics = "=0.22.3"
lazy_static = "1.4"

[patch.crates-io]
# We patch `ahash` here since version mismatches w/ the contracts code have
# led to verification errors in the past.
ahash = { git = "https://github.com/tkaitchuck/aHash.git", tag = "v0.8.11" }
