[workspace]
resolver = "3"
members = [
	"crates/circuits/circuits-core",
	"crates/circuits/circuit-types",
	"crates/circuits/circuit-macros",
	"crates/constants",
	# "crates/common",
	# "crates/config",
	# "crates/core",
	# "crates/darkpool-client",
	# "crates/api/external-api",
	# "crates/api/gossip-api",
	# "crates/testing/mock-node",
	# "crates/node-support/snapshot-sidecar",
	# "crates/node-support/event-export-sidecar",
	# "crates/node-support/bootloader",
	"crates/crypto",
	"crates/darkpool-types",
	"crates/state",
	# "crates/system-primitives/system-bus",
	# "crates/testing/test-helpers",
	"crates/util",
	# "crates/workers/api-server",
	# "crates/workers/api-server/benches/api-server-bench-util",
	# "crates/workers/chain-events",
	# "crates/workers/event-manager",
	# "crates/workers/gossip-server",
	# "crates/workers/handshake-manager",
	# "crates/workers/job-types",
	# "crates/workers/network-manager",
	# "crates/workers/price-reporter/worker",
	# "crates/workers/price-reporter/price-state",
	# "crates/workers/proof-manager",
	# "crates/workers/task-driver",
	# "crates/metrics/renegade-metrics",
	# "crates/system-primitives/system-clock",
	# "crates/metrics/metrics-sampler",
]

[profile.bench]
opt-level = 3 # Full optimizations
lto = true
debug = true

[profile.release]
opt-level = 3     # Full optimizations
codegen-units = 1
lto = true

[workspace.dependencies]
# === Arithmetic + Cryptography === #
ark-mpc = { git = "https://github.com/renegade-fi/ark-mpc", default-features = false }
mpc-plonk = { git = "https://github.com/renegade-fi/mpc-jellyfish.git" }
mpc-relation = { git = "https://github.com/renegade-fi/mpc-jellyfish.git" }
jf-primitives = { git = "https://github.com/renegade-fi/mpc-jellyfish.git" }
num-bigint = { version = "0.4.3" }
rand = "0.8"
rand_core = "0.5"

# === Networking === #
libp2p = "0.51"
libp2p-core = { version = "0.39" }
libp2p-kad = { version = "0.43" }
libp2p-identity = { version = "0.1" }
libp2p-swarm = { version = "0.42" }
libp2p-swarm-derive = { version = "0.32" }

# === Concurrency + Messaging === #
crossbeam = "0.8"
futures = "0.3"
tokio = { version = "1" }

# === Ethereum Libraries === #
alloy = "1.0.1"
alloy-contract = "1.0.1"
alloy-primitives = "1.0.1"
alloy-sol-types = "1.0.1"

# === HTTP === #
reqwest = { version = "0.12", features = ["json"] }
http = { version = "1.3.1" }

# === Workspace Dependencies === #
darkpool-client = { path = "crates/darkpool-client" }
api-server = { path = "crates/workers/api-server" }
chain-events = { path = "crates/workers/chain-events" }
constants = { path = "crates/constants", default-features = false }
circuits-core = { path = "crates/circuits/circuits-core", default-features = false }
circuit-macros = { path = "crates/circuits/circuit-macros", default-features = false }
circuit-types = { path = "crates/circuits/circuit-types", default-features = false }
darkpool-types = { path = "crates/darkpool-types", default-features = false }
common = { path = "crates/common", default-features = false }
config = { path = "crates/config", default-features = false }
event-manager = { path = "crates/workers/event-manager", default-features = false }
external-api = { path = "crates/api/external-api", default-features = false }
gossip-api = { path = "crates/api/gossip-api", default-features = false }
gossip-server = { path = "crates/workers/gossip-server", default-features = false }
handshake-manager = { path = "crates/workers/handshake-manager", default-features = false }
job-types = { path = "crates/workers/job-types", default-features = false }
metrics-sampler = { path = "crates/metrics/metrics-sampler", default-features = false }
mock-node = { path = "crates/testing/mock-node", default-features = false }
network-manager = { path = "crates/workers/network-manager", default-features = false }
price-reporter = { path = "crates/workers/price-reporter/worker", default-features = false }
price-state = { path = "crates/workers/price-reporter/price-state", default-features = false }
proof-manager = { path = "crates/workers/proof-manager", default-features = false }
crypto = { path = "crates/crypto", default-features = false }
renegade-metrics = { path = "crates/metrics/renegade-metrics", default-features = false }
state = { path = "crates/state", default-features = false }
system-bus = { path = "crates/system-primitives/system-bus", default-features = false }
system-clock = { path = "crates/system-primitives/system-clock", default-features = false }
task-driver = { path = "crates/workers/task-driver", default-features = false }
test-helpers = { path = "crates/testing/test-helpers", default-features = false }
util = { path = "crates/util", default-features = false }

# === Misc === #
async-trait = "0.1"
eyre = "0.6"
indexmap = "2.0.2"
itertools = "0.10"
serde = { version = "1.0" }
serde_json = "1.0.64"
thiserror = "2.0"
tracing = "0.1"
tracing-opentelemetry = "0.22"
metrics = "=0.22.3"
lazy_static = "1.4"

# === Serialization === #
rkyv = "0.8.8"

[patch.crates-io]
# We patch `ahash` here since version mismatches w/ the contracts code have
# led to verification errors in the past.
ahash = { git = "https://github.com/tkaitchuck/aHash.git", tag = "v0.8.11" }
