[package]
name = "circuit-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[features]
bench = []

[dependencies]
mpc-bulletproof = { git = "https://github.com/renegade-fi/mpc-bulletproof" }
proc-macro2 = "1.0.50"
quote = "1.0.23"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
lazy_static = "1.4"
merlin = "2.0"