[package]
name = "circuit-types"
version = "0.1.0"
edition = "2021"

[features]
default = ["proof-system-types"]
# This feature enables rich proof system types that are not necessary for
# all use cases outside of the relayer, but are used extensively within the
# relayer
proof-system-types = [
    "ark-mpc/default",
    "circuit-macros",
    "constants/mpc-types",
    "dep:jf-primitives",
    "dep:mpc-plonk",
    "dep:mpc-relation",
]
test-helpers = ["proof-system-types", "mpc-plonk/test-srs"]

[dependencies]
# === Cryptography === #
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-mpc = { workspace = true, features = ["scalar"] }
ark-serialize = "0.4"
jf-primitives = { workspace = true, features = [
    "std",
    "parallel",
], optional = true }
k256 = { version = "0.13", features = ["expose-field"] }
mpc-plonk = { workspace = true, optional = true }
mpc-relation = { workspace = true, optional = true }

# === Arithmetic === #
bigdecimal = "0.3"
num-bigint = { version = "0.4", features = ["rand", "serde"] }
num-integer = "0.1"
rand = "0.8"

# === Async + Runtime === #
async-trait = { workspace = true }
futures = { workspace = true }

# === Workspace Crates === #
circuit-macros = { workspace = true, optional = true }
constants = { workspace = true, default-features = false, features = [
    "scalar",
] }
renegade-crypto = { workspace = true }

# === Misc === #
hex = "0.4"
byteorder = "1.5"
itertools = "0.10"
lazy_static = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
serde_json = "1.0"

[dev-dependencies]
test-helpers = { workspace = true, features = ["mpc-network"] }
tokio = { workspace = true }
