[package]
name = "circuits"
version = "0.1.0"
edition = "2024"

[features]
default = []
test_helpers = ["dep:ctor", "util/mocks", "util/matching-engine"]
stats = ["ark-mpc/stats"]
ci = ["test_helpers"]

[[test]]
name = "integration"
path = "integration/main.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "valid_wallet_create"
path = "benches/v1/valid_wallet_create.rs"
harness = false
required-features = ["test_helpers"]

#####################
### V1 Benchmarks ###
#####################

[[bench]]
name = "valid_wallet_update"
path = "benches/v1/valid_wallet_update.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "valid_reblind"
path = "benches/v1/valid_reblind.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "valid_commitments"
path = "benches/v1/valid_commitments.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "match"
path = "benches/v1/match.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "full_match"
path = "benches/v1/full_match.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "internal_match_settlement"
path = "benches/v1/internal_match_settlement.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "valid_match_settle_with_commitments"
path = "benches/v1/valid_match_settle_with_commitments.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "valid_match_settle_atomic"
path = "benches/v1/valid_match_settle_atomic.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "valid_match_settle_atomic_with_commitments"
path = "benches/v1/valid_match_settle_atomic_with_commitments.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "valid_malleable_match_settle_atomic"
path = "benches/v1/valid_malleable_match_settle_atomic.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "valid_relayer_fee_settlement"
path = "benches/v1/valid_relayer_fee_settlement.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "valid_offline_fee_settlement"
path = "benches/v1/valid_offline_fee_settlement.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "valid_fee_redemption"
path = "benches/v1/valid_fee_redemption.rs"
harness = false
required-features = ["test_helpers"]

#####################
### V2 Benchmarks ###
#####################

[[bench]]
name = "valid_deposit"
path = "benches/v2/valid_deposit.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "valid_balance_create"
path = "benches/v2/valid_balance_create.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "valid_withdrawal"
path = "benches/v2/valid_withdrawal.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "valid_private_protocol_fee_payment"
path = "benches/v2/valid_private_protocol_fee_payment.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "valid_private_relayer_fee_payment"
path = "benches/v2/valid_private_relayer_fee_payment.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "valid_public_protocol_fee_payment"
path = "benches/v2/valid_public_protocol_fee_payment.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "valid_public_relayer_fee_payment"
path = "benches/v2/valid_public_relayer_fee_payment.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "valid_note_redemption"
path = "benches/v2/valid_note_redemption.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "intent_only_first_fill"
path = "benches/v2/intent_only_first_fill.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "intent_only"
path = "benches/v2/intent_only.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "intent_only_public_settlement"
path = "benches/v2/intent_only_public_settlement.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "intent_and_balance"
path = "benches/v2/intent_and_balance.rs"
harness = false
required-features = ["test_helpers"]

[[bench]]
name = "intent_and_balance_public_settlement"
path = "benches/v2/intent_and_balance_public_settlement.rs"
harness = false
required-features = ["test_helpers"]

[dependencies]
# === Cryptography + Arithmetic === #
alloy-primitives = { workspace = true }
ark-crypto-primitives = { version = "0.4", features = [
    "crh",
    "merkle_tree",
    "sponge",
] }
ark-ec = "0.4"
ark-ff = "0.4"
ark-mpc = { workspace = true }
bigdecimal = "0.3"
jf-primitives = { workspace = true, features = ["parallel", "std"] }
mpc-plonk = { workspace = true, features = ["std"] }
mpc-relation = { workspace = true, features = ["std"] }
num-bigint = { version = "0.4", features = ["rand", "serde"] }
num-integer = "0.1"

# === Workspace Dependencies === #
circuit-macros = { workspace = true }
circuit-types = { workspace = true, default-features = false, features = [
    "proof-system-types",
] }
constants = { workspace = true, features = ["mpc-types"] }
renegade-crypto = { workspace = true, features = ["non-wasm"] }
util = { workspace = true, features = ["blockchain"] }

# === Misc Dependencies === #
bitvec = "1.0"
ctor = { version = "0.1", optional = true }
futures = { workspace = true }
itertools = "0.10"
lazy_static = { workspace = true }
rand = { version = "0.8" }
serde = { workspace = true, features = ["serde_derive"] }
serde_json = "1.0"

[dev-dependencies]
ark-ec = "0.4"
circuit-types = { workspace = true, features = ["test-helpers"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2"
criterion = { version = "0.5", features = ["async", "async_tokio"] }
ctor = "0.1"
dns-lookup = "1.0"
eyre = { workspace = true }
inventory = "0.3"
k256 = "0.13"
mpc-plonk = { workspace = true, features = ["test_apis", "std"] }
rand = "0.8"
serde_json = "1.0"
test-helpers = { workspace = true, features = ["mpc-network", "test-harness"] }
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
util = { workspace = true, features = [
    "mocks",
    "matching-engine",
    "telemetry",
] }
